fixed styling for CA, soon for subtopics

--- a/main/html/content-areas/CA2 - Intro To Programming/intro-to-programming.html
+++ b/main/html/content-areas/CA2 - Intro To Programming/intro-to-programming.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="../styles.css" />
 </head>
 <body>
+  <div class="page-wrapper">
     <header>
         <a href="../../index.html">
             <img src="../../../images/logo.png" alt="TLevelTutor Logo" width="100" height="100" id="header-logo"/>
@@ -22,7 +23,7 @@
         </div>
     </header>
 
-<content>
+<div class= "content">
 <div id="myNav" class="overlay">
     <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
     <br><br><br><br><br>
@@ -92,25 +93,28 @@
 
   </script>
 
-    <main>
-    <h2>Content Area 2: Introduction to Programming</h2>
-    <a href="subtopic/2.1-standard-data-types/2.1-standard-data-types.html" class="subtopic-box">2.1 Standard Data Types</a>
-    <a href="subtopic/2.2-variables-and-constants/2.2-variables-and-constants.html" class="subtopic-box">2.2 Variables and Constants</a>
-    <a href="subtopic/2.3-data-structures/2.3-data-structures.html" class="subtopic-box">2.3 Data Structures</a>
-    <a href="subtopic/2.4-operators/2.4-operators.html" class="subtopic-box">2.4 Operators</a>
-    <a href="subtopic/2.5-input-and-output/2.5-input-and-output.html" class="subtopic-box">2.5 Input and Output</a>
-    <a href="subtopic/2.6-actions/2.6-actions.html" class="subtopic-box">2.6 Actions</a>
-    <a href="subtopic/2.7-functions-and-procedures/2.7-functions-and-procedures.html" class="subtopic-box">2.7 Functions and Procedures</a>
-    <a href="subtopic/2.8-validation/2.8-validation.html" class="subtopic-box">2.8 Validation</a>
-    <a href="subtopic/2.9-design-considerations-and-programming-practices/2.9-design-considerations-and-programming-practices.html" class="subtopic-box">2.9 Design Considerations and Programming Practices</a>
-    <a href="subtopic/2.10-robust-code/2.10-robust-code.html" class="subtopic-box">2.10 Robust Code</a>
-    <a href="subtopic/2.11-common-algorithms/2.11-common-algorithms.html" class="subtopic-box">2.11 Common Algorithms</a>
-    <a href="subtopic/2.12-testing/2.12-testing.html" class="subtopic-box">2.12 Testing</a>
-</main>
-</content>
+  <main>
+    <div class="container">
+      <h2>Content Area 2: Introduction to Programming</h2>
+      <a href="subtopic/2.1-standard-data-types/2.1-standard-data-types.html" class="subtopic-box">2.1 Standard Data Types</a>
+      <a href="subtopic/2.2-variables-and-constants/2.2-variables-and-constants.html" class="subtopic-box">2.2 Variables and Constants</a>
+      <a href="subtopic/2.3-data-structures/2.3-data-structures.html" class="subtopic-box">2.3 Data Structures</a>
+      <a href="subtopic/2.4-operators/2.4-operators.html" class="subtopic-box">2.4 Operators</a>
+      <a href="subtopic/2.5-input-and-output/2.5-input-and-output.html" class="subtopic-box">2.5 Input and Output</a>
+      <a href="subtopic/2.6-actions/2.6-actions.html" class="subtopic-box">2.6 Actions</a>
+      <a href="subtopic/2.7-functions-and-procedures/2.7-functions-and-procedures.html" class="subtopic-box">2.7 Functions and Procedures</a>
+      <a href="subtopic/2.8-validation/2.8-validation.html" class="subtopic-box">2.8 Validation</a>
+      <a href="subtopic/2.9-design-considerations-and-programming-practices/2.9-design-considerations-and-programming-practices.html" class="subtopic-box">2.9 Design Considerations and Programming Practices</a>
+      <a href="subtopic/2.10-robust-code/2.10-robust-code.html" class="subtopic-box">2.10 Robust Code</a>
+      <a href="subtopic/2.11-common-algorithms/2.11-common-algorithms.html" class="subtopic-box">2.11 Common Algorithms</a>
+      <a href="subtopic/2.12-testing/2.12-testing.html" class="subtopic-box">2.12 Testing</a>
+    </div>
+  </main>
+</div>
     <footer>
         <p>&copy; 2025 TLevelTutor. All rights reserved.</p>
     </footer>
+</div>
 </body>
 </html>
 
