--- a/main/html/content-areas/CA3 - Emerging Issues/emerging-issues.html
+++ b/main/html/content-areas/CA3 - Emerging Issues/emerging-issues.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="../styles.css" />
 </head>
 <body>
+  <div class="page-wrapper">
     <header>
         <a href="../../index.html">
             <img src="../../../images/logo.png" alt="TLevelTutor Logo" width="100" height="100" id="header-logo"/>
@@ -22,7 +23,7 @@
         </div>
     </header>
 
-<content>
+<div class= "content">
 <div id="myNav" class="overlay">
     <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
     <br><br><br><br><br>
@@ -94,13 +95,17 @@
   </script>
 
     <main>
+      <div class = "container">
         <h2>Content Area 3: Emerging Issues</h2>
         <a href="subtopic/3.1-impact-of-digital-technologies/3.1-impact-of-digital-technologies.html" class="subtopic-box">3.1 Impact of Digital Technologies</a>
         <a href="subtopic/3.2-emerging-technologies/3.2-emerging-technologies.html" class="subtopic-box">3.2 Emerging Technologies</a>
+      </div>
+
     </main>
-</content>
+  </div>
     <footer>
         <p>&copy; 2025 TLevelTutor. All rights reserved.</p>
     </footer>
+</div>
 </body>
 </html>
