--- a/main/html/content-areas/CA5 - Business Context/business-context.html
+++ b/main/html/content-areas/CA5 - Business Context/business-context.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="../styles.css" />
 </head>
 <body>
+  <div class= "page-wrapper">
     <header>
         <a href="../../index.html">
             <img src="../../../images/logo.png" alt="TLevelTutor Logo" width="100" height="100" id="header-logo"/>
@@ -22,7 +23,7 @@
         </div>
     </header>
     
-<content>
+<div class = "content">
 <div id="myNav" class="overlay">
     <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
     <br><br><br><br><br>
@@ -93,16 +94,19 @@
   </script>
 
     <main>
+      <div class = "container">
         <h2>Content Area 5: Business Context</h2>
         <a href="subtopic/5.1-business-environment/5.1-business-environment.html" class="subtopic-box">5.1 Business Environment</a>
         <a href="subtopic/5.2-digital-value-to-organisations/5.2-digital-value-to-organisations.html" class="subtopic-box">5.2 Digital Value to Organisations</a>
         <a href="subtopic/5.3-risk-to-organisations-of-using-digital-systems/5.3-risk-to-organisations-of-using-digital-systems.html" class="subtopic-box">5.3 Risk to Organisations of Using Digital Systems</a>
         <a href="subtopic/5.4-technical-change-management/5.4-technical-change-management.html" class="subtopic-box">5.4 Technical Change Management</a>
+    </div>
     </main>
-    </content>
+  </div>
     <footer>
         <p>&copy; 2025 TLevelTutor. All rights reserved.</p>
     </footer>
+</div>
 </body>
 </html>
 
