--- a/main/html/content-areas/CA1 - Problem Solving/problem-solving.html
+++ b/main/html/content-areas/CA1 - Problem Solving/problem-solving.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="../styles.css" /> 
 </head>
 <body>
+<div class="page-wrapper">
     <header>
         <a href="../../index.html" id="logo-link">
             <img src="../../../images/logo.png" alt="TLevelTutor Logo" width="100" height="100" id="header-logo" />
@@ -21,7 +22,7 @@
             <h1>Problem Solving</h1>
         </div>
     </header>
-<content>
+<div class= "content">
 <div id="myNav" class="overlay">
     <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
     <br><br><br><br><br>
@@ -57,9 +58,7 @@
     <a href="../../Other.html">Other</a>
 
   </div>
-
   <span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776; </span>
-
   <script>
     function openNav() {
       document.getElementById("myNav").style.height = "100%";
@@ -95,14 +94,18 @@
 
 
     <main>
+      <div class = "container">
         <h2>Content Area 1: Problem Solving</h2>
         <a href="subtopic/1.1-computational-thinking/1.1-computational-thinking.html" class="subtopic-box">1.1 Computational Thinking</a>
         <a href="subtopic/1.2-algorithmic-design/1.2-algorithmic-design.html" class="subtopic-box">1.2 Algorithmic Design</a>
         <a href="subtopic/1.3-strategies/1.3-strategies.html" class="subtopic-box">1.3 Strategies</a>
+      </div>
     </main>
-  </content>
+
+  </div>
     <footer>
         <p>&copy; 2025 TLevelTutor. All rights reserved.</p>
     </footer>
+</div>
 </body>
 </html>
