--- a/main/html/content-areas/CA4 - Legislation And Regulatory Requirements/legislation-and-regulatory-requirements.html
+++ b/main/html/content-areas/CA4 - Legislation And Regulatory Requirements/legislation-and-regulatory-requirements.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="../styles.css" />
 </head>
 <body>
+  <div class= "page-wrapper">
     <header>
         <a href="../../index.html">
             <img src="../../../images/logo.png" alt="TLevelTutor Logo" width="100" height="100" id="header-logo"/>
@@ -21,7 +22,7 @@
             <h1>Legislation and Regulatory Requirements</h1>
         </div>
     </header>
-<content>
+<div class= "content">
 <div id="myNav" class="overlay">
     <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
     <br><br><br><br><br>
@@ -92,14 +93,17 @@
   </script>
 
     <main>
+      <div class="container">
         <h2>Content Area 4: Legislation and Regulatory Requirements</h2>
         <a href="subtopic/4.1-legislation/4.1-legislation.html" class="subtopic-box">4.1 Legislation</a>
         <a href="subtopic/4.2-guidelines/4.2-guidelines.html" class="subtopic-box">4.2 Guidelines</a>
+      </div>
     </main>
   
-    </content>
+  </div>
     <footer>
         <p>&copy; 2025 TLevelTutor. All rights reserved.</p>
     </footer>
+</div>
 </body>
 </html>
