--- a/main/html/content-areas/CA6 - Data/data.html
+++ b/main/html/content-areas/CA6 - Data/data.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="../styles.css" />
 </head>
 <body>
+  <div class="page-wrapper">
     <header>
         <a href="../../index.html">
             <img src="../../../images/logo.png" alt="TLevelTutor Logo" width="100" height="100" id="header-logo"/>
@@ -21,7 +22,7 @@
             <h1>Data</h1>
         </div>
     </header>
-<content>
+<div class= "content">
 <div id="myNav" class="overlay">
     <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
     <br><br><br><br><br>
@@ -91,6 +92,7 @@
   </script>
 
     <main>
+      <div class= "container">
         <h2>Content Area 6: Data</h2>
         <a href="subtopic/6.1-data-information-and-knowledge/6.1-data-information-and-knowledge.html" class="subtopic-box">6.1 Data, Information, and Knowledge</a>
         <a href="subtopic/6.2-methods-of-transforming-data/6.2-methods-of-transforming-data.html" class="subtopic-box">6.2 Methods of Transforming Data</a>
@@ -104,11 +106,13 @@
         <a href="subtopic/6.10-data-models/6.10-data-models.html" class="subtopic-box">6.10 Data Models</a>
         <a href="subtopic/6.11-data-access-across-platforms/6.11-data-access-across-platforms.html" class="subtopic-box">6.11 Data Access Across Platforms</a>
         <a href="subtopic/6.12-data-analysis-tools/6.12-data-analysis-tools.html" class="subtopic-box">6.12 Data Analysis Tools</a>
+        </div>
     </main>
 
-</content>
+  </div>
     <footer>
         <p>&copy; 2025 TLevelTutor. All rights reserved.</p>
     </footer>
+</div>
 </body>
 </html>
