--- a/main/html/content-areas/CA7 - Digital Environments/digital-environments.html
+++ b/main/html/content-areas/CA7 - Digital Environments/digital-environments.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="../styles.css" />
 </head>
 <body>
+  <div class = "page-wrapper">
     <header>
         <a href="../../index.html">
             <img src="../../../images/logo.png" alt="TLevelTutor Logo" width="100" height="100" id="header-logo"/>
@@ -21,7 +22,7 @@
             <h1>Digital Environments</h1>
         </div>
     </header>
-<content>
+<div class= "content">
 <div id="myNav" class="overlay">
     <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
     <br><br><br><br><br>
@@ -92,6 +93,7 @@
   </script>
 
     <main>
+      <div class= "container">
         <h2>Content Area 7: Digital Environments</h2>
         <a href="subtopic/7.1-Hardware/7.1-Hardware.html" class="subtopic-box">7.1 Hardware</a>
         <a href="subtopic/7.2-Software/7.2-Software.html" class="subtopic-box">7.2 Software</a>
@@ -99,11 +101,12 @@
         <a href="subtopic/7.4-Virtual-Environments/7.4-Virtual-Environments.html" class="subtopic-box">7.4 Virtual Environments</a>
         <a href="subtopic/7.5-Cloud-Environments/7.5-Cloud-Environments.html" class="subtopic-box">7.5 Cloud Environments</a>
         <a href="subtopic/7.6-Resillient-Digital-Environments/7.6-Resillient-Digital-Environments.html" class="subtopic-box">7.6 Resillient Digital Environments</a>
-
+      </div>
     </main>
-    </content>
+  </div>
     <footer>
         <p>&copy; 2025 TLevelTutor. All rights reserved.</p>
     </footer>
+</div>
 </body>
 </html>
