--- a/main/html/content-areas/CA8 - Security/security.html
+++ b/main/html/content-areas/CA8 - Security/security.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="../styles.css" />
 </head>
 <body>
+  <div class= "page-wrapper">
     <header>
         <a href="../../index.html">
             <img src="../../../images/logo.png" alt="TLevelTutor Logo" width="100" height="100" id="header-logo" />
@@ -21,7 +22,7 @@
             <h1>Security</h1>
         </div>
     </header>
-<content>
+<div class= "content">
 <div id="myNav" class="overlay">
     <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
     <br><br><br><br><br>
@@ -92,15 +93,18 @@
   </script>
 
     <main>
+      <div class= "container">
         <h2>Content Area 8: Security</h2>
         <a href="subtopic/8.1-Security-Risks/8.1-Security-Risks.html" class="subtopic-box">8.1 Security Risks</a>
         <a href="subtopic/8.2-Types-of-Threats/8.2-Types-of-Threats.html" class="subtopic-box">8.2 Types of Threats</a>
         <a href="subtopic/8.3-Threat-Mitigation/8.3-Threat-Mitigation.html" class="subtopic-box">8.3 Threat Mitigation</a>
         <a href="subtopic/8.4-Effective-Security/8.4-Effective-Security.html" class="subtopic-box">8.4 Interrelationship of Components Required for Effective Security </a>
+      </div>
     </main>
-  </content>
+  </div>
     <footer>
         <p>&copy; 2025 TLevelTutor. All rights reserved.</p>
     </footer>
+  </div>
 </body>
 </html>
