done style for paper1

--- a/main/html/content-areas/CA4 - Legislation And Regulatory Requirements/subtopic/4.2-guidelines/4.2-guidelines.html
+++ b/main/html/content-areas/CA4 - Legislation And Regulatory Requirements/subtopic/4.2-guidelines/4.2-guidelines.html
@@ -91,7 +91,7 @@
 
   </script>
     
-
+  <div class= "container">
     <form>
         <label for="sections">Jump to Section:</label>
         <select name="sections" id="sections">
@@ -761,14 +761,15 @@
         showQuestion();
       </script>
     </main>
+  </div>
 
     <arrow-Nav>
         <a href="../4.1-legislation/4.1-legislation.html" id="back arrow-link">
-            <img src="../../../../../images/back-arrow.png" alt="back arrow" width="100" height="100" id="arrow"/>
+            <img src="../../../../../images/back-arrow.png" alt="back arrow" width="100" height="100" class="arrow"/>
         </a>
         
         <a href="../../legislation-and-regulatory-requirements.html" id="home-link">
-            <img src="../../../../../images/home.png" alt="home" width="100" height="100" id="arrow"/>
+            <img src="../../../../../images/home.png" alt="home" width="100" height="100" class="arrow"/>
         </a>
 
     </arrow-Nav> 
