done esp & other html

--- a/main/html/Other/About T-levels/About.html
+++ b/main/html/Other/About T-levels/About.html
@@ -71,7 +71,7 @@
   }
   </script>
 
-
+  <div class= "container">
     <form>
         <label for="sections">Jump to Section:</label>
         <select name="sections" id="sections">
@@ -144,6 +144,7 @@
                 <li>That being said, you can retake at different points if you need too. <br> &ensp; <em>however, it is <strong>highly recommended</strong> you try your best first time round to avoid unnecessary stress in year 13</em></li>
             </ul> 
     </main>
+  </div>
     
     <footer>
         <p>&copy; 2025 TLevelTutor. All rights reserved.</p>
