--- a/main/html/Esp.html
+++ b/main/html/Esp.html
@@ -128,15 +128,15 @@
 
     <arrow-Nav>
       <a href="./content-Areas.html" id="back arrow-link">
-          <img src="../images/back-arrow.png" alt="back arrow" width="100" height="100" id="arrow"/>
+          <img src="../images/back-arrow.png" alt="back arrow" width="100" height="100" class="arrow"/>
       </a>
       
       <a href="./index.html" id="home-link">
-          <img src="../images/home.png" alt="home" width="100" height="100" id="arrow"/>
+          <img src="../images/home.png" alt="home" width="100" height="100" class="arrow"/>
       </a>
 
       <a href="./Other.html" id="next arrow-link">
-          <img src="../images/next-arrow.png" alt="next arrow" width="100" height="100" id="arrow"/>
+          <img src="../images/next-arrow.png" alt="next arrow" width="100" height="100" class="arrow"/>
       </a>
     </arrow-Nav> 
   </content>
