--- a/main/html/Other.html
+++ b/main/html/Other.html
@@ -110,11 +110,11 @@
 
     <arrow-Nav>
       <a href="./Esp.html" id="back arrow-link">
-          <img src="../images/back-arrow.png" alt="back arrow" width="100" height="100" id="arrow"/>
+          <img src="../images/back-arrow.png" alt="back arrow" width="100" height="100" class="arrow"/>
       </a>
       
       <a href="./index.html" id="home-link">
-          <img src="../images/home.png" alt="home" width="100" height="100" id="arrow"/>
+          <img src="../images/home.png" alt="home" width="100" height="100" class="arrow"/>
       </a>
     </arrow-Nav> 
     </content>
