--- a/main/html/content-Areas.html
+++ b/main/html/content-Areas.html
@@ -137,11 +137,11 @@
     <arrow-Nav>
       
       <a href="./index.html" id="home-link">
-          <img src="../images/home.png" alt="home" width="100" height="100" id="arrow"/>
+          <img src="../images/home.png" alt="home" width="100" height="100" class="arrow"/>
       </a>
 
       <a href="./Esp.html" id="next arrow-link">
-          <img src="../images/next-arrow.png" alt="next arrow" width="100" height="100" id="arrow"/>
+          <img src="../images/next-arrow.png" alt="next arrow" width="100" height="100" class="arrow"/>
       </a>
     </arrow-Nav> 
   </content>
