--- a/main/html/employer-set-project/Pre-Task/Pre-Task.html
+++ b/main/html/employer-set-project/Pre-Task/Pre-Task.html
@@ -91,7 +91,7 @@
 
   </script>
 
-
+  <div class= "container">
     <form>
         <label for="sections">Jump to Section:</label>
         <select name="sections" id="sections">
@@ -145,14 +145,15 @@
             <li>Focus on understanding the goals and requirements.</li>
         </ul>
     </main>
+  </div>
 
     <arrow-Nav>
         <a href="../../index.html" id="back arrow-link">
-            <img src="../../../images/back-arrow.png" alt="back arrow" width="100" height="100" id="arrow"/>
+            <img src="../../../images/back-arrow.png" alt="back arrow" width="100" height="100" class="arrow"/>
         </a>
 
         <a href="../Task 1-Planning-A-Project/Task1.html" id="next arrow-link">
-            <img src="../../../images/next-arrow.png" alt="next arrow" width="100" height="100" id="arrow"/>
+            <img src="../../../images/next-arrow.png" alt="next arrow" width="100" height="100" class="arrow"/>
         </a>
     </arrow-Nav>   
     
