--- a/main/html/content-areas/CA5 - Business Context/subtopic/5.4-technical-change-management/5.4-technical-change-management.html
+++ b/main/html/content-areas/CA5 - Business Context/subtopic/5.4-technical-change-management/5.4-technical-change-management.html
@@ -92,7 +92,7 @@
 
   </script>
     
-
+    <div class= "container">
     <form>
         <label for="sections">Jump to Section:</label>
         <select name="sections" id="sections">
@@ -831,14 +831,14 @@
         showQuestion();
       </script>
     </main>
-
+    </div>
     <arrow-Nav>
         <a href="../5.3-risk-to-organisations-of-using-digital-systems/5.3-risk-to-organisations-of-using-digital-systems.html" id="back arrow-link">
-            <img src="../../../../../images/back-arrow.png" alt="back arrow" width="100" height="100" id="arrow"/>
+            <img src="../../../../../images/back-arrow.png" alt="back arrow" width="100" height="100" class="arrow"/>
         </a>
 
         <a href="../../business-context.html" id="home-link">
-            <img src="../../../../../images/home.png" alt="home" width="100" height="100" id="arrow"/>
+            <img src="../../../../../images/home.png" alt="home" width="100" height="100" class="arrow"/>
         </a>
     </arrow-Nav> 
     
