--- a/main/html/content-areas/CA8 - Security/subtopic/8.1-Security-Risks/8.1-Security-Risks.html
+++ b/main/html/content-areas/CA8 - Security/subtopic/8.1-Security-Risks/8.1-Security-Risks.html
@@ -90,7 +90,7 @@
     })
 
   </script>
-    
+    <div class= "container">
     <form>
         <label for="sections">Jump to Section:</label>
         <select name="sections" id="sections">
@@ -370,13 +370,13 @@
         showQuestion();
       </script>
     </main>
-
+    </div>
     <arrow-Nav>
         <a href="../../security.html" id="back arrow-link">
-            <img src="../../../../../images/back-arrow.png" alt="back arrow" width="100" height="100" id="arrow"/>
+            <img src="../../../../../images/back-arrow.png" alt="back arrow" width="100" height="100" class="arrow"/>
         </a>
         <a href="../8.2-Types-of-Threats/8.2-Types-of-Threats.html" id="next arrow-link">
-            <img src="../../../../../images/next-arrow.png" alt="next arrow" width="100" height="100" id="arrow"/>
+            <img src="../../../../../images/next-arrow.png" alt="next arrow" width="100" height="100" class="arrow"/>
         </a>
     </arrow-Nav> 
     
